set max width for images, addressing screen overflow issue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -181,6 +181,7 @@ main h4 {
 }
 
 main img {
+  max-width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
